@@ -1,5 +1,7 @@
 2010-11-03 S. Thiell <stephane.thiell@cea.fr>
 
+	* CLI/Clush.py: Added --rcopy support (trac ticket #55).
+
 	* Task.py: Added rcopy() method (part of trac ticket #55).
 
 	* Worker/Ssh.py: Support for reverse file copy (part of trac ticket #55).
